--- a/toyStore/style.css
+++ b/toyStore/style.css
@@ -23,6 +23,7 @@ body{
     text-align: center;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
  
 #header{
@@ -92,11 +93,62 @@ body{
     border-bottom: 2px solid darkcyan;
 }
 
-.slideshow-container {
+.artigo{
+    margin-top: 5rem;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    padding: 100px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.artigo img{
+    height: 300px;
+    width: auto;
+    object-fit: cover;
+    object-position: center;
 
+}
+.artigo p{
+    font-size: 15px;
+    color: black;
+    font-weight: 600;
+    padding: 0 50px 0 100px;
+    letter-spacing: 0.5px;
+    line-height: 1.5;
+}
+
+
+
+#sec-contato{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#form-contato{
+    display: flex;
+    flex-direction: column;
+}
+.row{
+    width: 100%;
+    margin: 5px 0;
+    display: flex;
+    flex-direction: column;
+}
+#form-contato input, #form-contato textarea{
+    border: 2px solid black;
+    padding: 6px 12px;
+    border-radius: 4px;
+}
+
+
+
+.slideshow-container {
     position: relative;
     margin: auto;
-  }
+}
 
 .prev, .next {
     cursor: pointer;
@@ -185,23 +237,115 @@ body{
         transform: translate(0, -11px) rotate(50deg);
     }
 
-    .corpo{
-        display: none;
-    }
-
-    .container{
-        display: none;
-    }
-
     body{
         background-color: white;
         background-image: none;
     }
 
+    .container{
+        max-width: 100px;
+        
+    }
+
+
+    .artigo{
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+        text-align: center;
+        padding: 20px;
+        flex-direction: column;
+    }
+    .artigo img{
+        height: auto;
+        width: 450px;
+    
+    }
+    .artigo p{
+        font-size: 15px;
+        color: black;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        line-height: 1.5;
+        padding: 10px;
+    }
+
+    .slideshow-container {
+        position: relative;
+        margin: 5rem 5rem 5rem 5rem;
+    }
     
 }
 
 
 @media (max-width: 768px){
+    body{
+        background-color: white;
+        background-image: none;
+    }
+
+    .container{
+        max-width: 300px;
+    }
+
+    #header #nav-header{
+        height: auto;
+    }
+ 
+    #header #nav-header #box-btn-hamburguer{
+        display: block;
+    }
+ 
+    #header #nav-header ul{
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        height: fit-content;
+        left: 0;
+        width: 100vw;
+        top: 100%;
+        text-align: center;
+    }
+
+    #header #nav-header ul a{
+        font-size: large;
+        font-weight: 500;
+    }
+
+    #header #nav-header ul.ativo{
+        display: block;
+        background-color: #013D7B;
+    
+    }
+
+    .change .bar1{
+        transform: translate(0, 11px) rotate(-45deg);
+    }
+      
+    .change .bar2{
+        opacity: 0;
+    }
+      
+    .change .bar3{
+        transform: translate(0, -11px) rotate(50deg);
+    }
+
+    .artigo{
+        text-align: center;
+        flex-direction: column;
+    }
+ 
+    .artigo img{
+        height: auto;
+        width: 450px;
+    }
+ 
+    .artigo p{
+        font-size: 20px;
+        color: black;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        line-height: 1.5;
+        padding: 0px 10px;
+    }
 
 }
