--- a/toyStore/style.css
+++ b/toyStore/style.css
@@ -145,46 +145,74 @@ body{
 
 
 
-.slideshow-container {
-    position: relative;
-    margin: auto;
-}
+/* carrosel*/
 
-.prev, .next {
-    cursor: pointer;
+.slide{
+    width: max-content;
+    height: 100%;
     position: absolute;
+    z-index: 1;
+    transition: left .4s cubic-bezier(.47, .13, .15, .89);
+}
+.conteudo-produto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: max-content;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px 14px;
+}
+.box-img-produto{
+    width: 100%;
+    max-width: 200px;
+    height: 150px;
+}
+.box-img-produto img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+.carousel{
+    position: relative;
+    width: 1140px;
+    height: 266px;
+    margin: 0 auto;
+}
+
+.carousel-content{
+    position: relative;
+    overflow: hidden;
+    transition: width .4s;
+    height: 100%;
+    
+}
+
+.nav {
+    position: absolute;
+    z-index: 50;
     top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: #F9D445;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
+    transform: translateY(-250%);
 }
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+ 
+.nav button {
+    background-color: transparent;
+    border: none;
+    color: black;
+    padding: 5px;
+    font-weight: 600;
+    font-size:larger;
 }
-.prev{
-    left: 0;
-    border-radius: 3px 0 0 3px;
+ 
+.nav.nav-left{
+    left: -50px;
 }
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-}
-
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
+.nav.nav-right{
+    right: -50px;
 }
  
 
